--- a/frontend/src/app/shared/components/header/user-dropdown/user-dropdown.component.html
+++ b/frontend/src/app/shared/components/header/user-dropdown/user-dropdown.component.html
@@ -4,7 +4,7 @@
     class="flex items-center text-gray-700 dropdown-toggle dark:text-gray-400"
   >
     <span class="mr-3 overflow-hidden rounded-full h-11 w-11">
-      <img src="/images/user/owner.png" alt="User" />
+      <!-- <img src="/images/user/logo-user.jpeg" alt="User" /> -->
     </span>
     <span class="block mr-1 font-medium text-theme-sm">
       {{ user?.username || 'Utilisateur' }}
